[gd_scene load_steps=2 format=3 uid="uid://c66epojm40ei5"]

[ext_resource type="Script" path="res://game/scripts/ui/BugCollectionLog.gd" id="1_script"]

[node name="BugCollectionLog" type="CanvasLayer"]
layer = 15
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 20.0
offset_right = 80.0
offset_bottom = 50.0
grow_horizontal = 2
text = "Bug Collection"
horizontal_alignment = 1

[node name="ProgressLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 55.0
offset_right = 100.0
offset_bottom = 80.0
grow_horizontal = 2
text = "Collection: 0 / 8 (0%)"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_top = 90.0
offset_right = 120.0
offset_bottom = 230.0
grow_horizontal = 2

[node name="BugList" type="VBoxContainer" parent="Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -45.0
offset_right = 40.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "Close"
